fix privacy policy page larger than screen width on small screens with max-width on faq-list

--- a/src/scss/components/organisms/_faq-list.scss
+++ b/src/scss/components/organisms/_faq-list.scss
@@ -1,4 +1,5 @@
 .faq-list{
+	max-width: calc(100vw - 2rem);
 	&.white-bg {
 		.wp-block-site-functionality-faq {
 			background-color: $white;
